// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Splash should render a Splash (with Subtitle) correctly 1`] = `
<div
  className="Splash sc-htpNat kCUJVC"
>
  <div
    className="Subtitle sc-bdVaJa iJAYEH"
  >
    Subtitle
  </div>
</div>
`;

exports[`Splash should render a Splash (with Title) correctly 1`] = `
<div
  className="Splash sc-htpNat kCUJVC"
>
  <div
    className="Title sc-bwzfXH gdcizV"
  >
    Title
  </div>
</div>
`;

exports[`Splash should render the default Splash correctly 1`] = `null`;
